[package]
name = "dioxus-compont"
version = "0.1.0"
edition = "2021"
autor = "keno1213"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = {version = "0.2.4", features = ["web", "fermi", "router"]}
dioxus-free-icons = { version = "0.5.1", features = ["material-design-icons-navigation"]}
